fix(Products): prevent horizontal scroll bar

--- a/src/pages/Products.module.scss
+++ b/src/pages/Products.module.scss
@@ -5,6 +5,7 @@
    flex-direction: column;
    align-items: center;
    width: 100vw;
+   max-width: 100%;
    padding-bottom: 2em;
    .inputWrapper {
       position: fixed;
